--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: reachr
 Title: Tools for Interacting with Survey Points Collected by Emlid GNSS Products
 Version: 0.0.0.9000
 Authors@R: 
-    person("William", "Petry", "K.", "wpetry@ncsu.edu", role = c("aut", "cre"),
+    person("William K.", "Petry", , "wpetry@ncsu.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5230-5987"))
 Description: Utility functions for interacting with data produced by Emlid Reach RS2(+) and
     Emlid Studio.
@@ -13,3 +13,5 @@ RoxygenNote: 7.2.3
 URL: https://github.com/DICELab-NCSU/reachr
 BugReports: https://github.com/DICELab-NCSU/reachr/issues
 LazyData: true
+Imports: 
+    tibble
