add VRS helper; fix merge error in read_emlid that was causing data dulication

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(as_ef_geom)
 export(check_ef_geom)
 export(check_rtk_range)
+export(mk_vrs)
 export(read_emlid)
 export(update_base)
 import(ggplot2)
