--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,15 @@ License: GPL (>= 3)
 URL: https://github.com/DICELab-NCSU/reachr
 BugReports: https://github.com/DICELab-NCSU/reachr/issues
 Imports: 
+    digest,
     dplyr,
     ggplot2,
     lubridate,
+    RSelenium,
     sf,
     stringr,
     tibble,
+    tools,
     units,
     utils
 Suggests: 
