finish Flow360 download & add rinex summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(as_ef_geom)
 export(check_ef_geom)
 export(check_rtk_range)
+export(dnld_flow360)
 export(llh_summary)
 export(read_emlid)
+export(rinex_summary)
 export(update_base)
+import(RSelenium)
 import(ggplot2)
 import(sf)
 import(units)
