--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_ef_geom)
 export(check_rtk_range)
 export(dnld_flow360)
 export(llh_summary)
+export(multilaterate)
 export(read_emlid)
 export(rinex_summary)
 export(update_base)
