--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
 Description: Utility functions for interacting with data produced by Emlid
     Reach RS2(+) and Emlid Studio.
 License: GPL (>= 3)
-URL: https://github.com/DICELab-NCSU/reachr
+URL: https://github.com/DICELab-NCSU/reachr, https://dicelab-ncsu.github.io/reachr/
 BugReports: https://github.com/DICELab-NCSU/reachr/issues
 Imports: 
     digest,
